(refactor) Fix many IntelliJ inspection issues.